--- a/index.html
+++ b/index.html
@@ -52,5 +52,24 @@
         </div>
       </div>
     </header>
+
+    <section class="why-me">
+      <div class="container why-me-wrapper">
+        <div class="block-text">
+          <span>Why choose me</span>
+          <h2>
+            Meeting Your Needs <br />
+            In Website Building
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Convallis tellus id interdum velit laoreet.
+          </p>
+          <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+        <div><img src="./assets/images/image2.svg" alt="icon chart" /></div>
+      </div>
+    </section>
   </body>
 </html>
