Finish service section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
     </header>
 
+    <!-- Why Me -->
     <section class="why-me">
       <div class="container why-me-wrapper">
         <div class="block-text">
@@ -69,6 +70,72 @@
           <a href="#" class="btn btn-primary">Learn More</a>
         </div>
         <div><img src="./assets/images/image2.svg" alt="icon chart" /></div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section class="bg-contrast">
+      <div class="container service-grid">
+        <div class="service-card">
+          <span class="bg-color-1"></span>
+          <div class="text">
+            <h3>Branding</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="service-card">
+          <span class="bg-color-2"></span>
+          <div class="text">
+            <h3>Design & UX</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="service-card">
+          <span class="bg-color-3"></span>
+          <div class="text">
+            <h3>Development</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="service-card">
+          <span class="bg-color-4"></span>
+          <div class="text">
+            <h3>User Analysis</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="service-card">
+          <span class="bg-color-5"></span>
+          <div class="text">
+            <h3>UX Research</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="service-card">
+          <span class="bg-color-6"></span>
+          <div class="text">
+            <h3>SEO Service</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
