--- a/index.html
+++ b/index.html
@@ -138,5 +138,24 @@
         </div>
       </div>
     </section>
+
+    <!-- Video Demo -->
+    <section class="video-demo">
+      <div class="container">
+        <div class="block-text">
+          <h2>Telling Our Story</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+            eiusmod <br />
+            tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="video-box">
+          <a href="https://www.youtube.com/watch?v=MFSx4jWmDfY" class="video-btn">
+            <img src="./assets/images/play.svg" alt="play video button">
+          </a>
+          <img class="" src="./assets/images/demo-video-thumbnail.jpg" alt="video thumbnail">
+      </div>
+    </section>
   </body>
 </html>
