--- a/index.html
+++ b/index.html
@@ -157,5 +157,46 @@
           <img class="" src="./assets/images/demo-video-thumbnail.jpg" alt="video thumbnail">
       </div>
     </section>
+
+    <!-- Pricing Plans -->
+    <section class="bg-contrast">
+      <div class="block-text pricing-header">
+        <h2>Choose the Right Package for You</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+          eiusmod <br />
+          tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="pricing-table">
+        <div class="price-card">
+          <h3>Basic</h3>
+          <span class="price">$99.99</span>
+          <div class="billed">per month</div>
+          <hr>
+          <ul class="features">
+            <li>
+              <span>Community Support</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>Flexible, simple license</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>100+ styled components</span>
+              <span class="icon">&#10761;</span>
+            </li>
+            <li>
+              <span>100+ header variations</span>
+              <span class="icon">&#10761;</span>
+            </li>
+            <li>
+              <span>Speedy build tooling</span>
+              <span class="icon">&#10761;</span>
+            </li>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
