--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="pricing-table">
         <div class="price-card">
           <h3>Basic</h3>
-          <span class="price">$99.99</span>
+          <div class="price">$99.90</div>
           <div class="billed">per month</div>
           <hr>
           <ul class="features">
@@ -194,6 +194,65 @@
             <li>
               <span>Speedy build tooling</span>
               <span class="icon">&#10761;</span>
+            </li>
+        </div>
+
+        <div class="price-card featured">
+          <h3>Standard</h3>
+          <div class="price">$199.90</div>
+          <div class="billed">per month</div>
+          <hr>
+          <ul class="features">
+            <li>
+              <span>Community Support</span>
+              <span class="icon checked">&#x2713;</span>
+            </li>
+            <li>
+              <span>Flexible, simple license</span>
+              <span class="icon checked">&#x2713;</span>
+            </li>
+            <li>
+              <span>100+ styled components</span>
+              <span class="icon checked">&#x2713;</span>
+            </li>
+            <li>
+              <span>100+ header variations</span>
+              <span class="icon times">&#10761;</span>
+            </li>
+            <li>
+              <span>Speedy build tooling</span>
+              <span class="icon times">&#10761;</span>
+            </li>
+            <div class="btn-wrapper">
+              <a class="btn btn-primary" href="#">Learn More</a>
+            </div>
+        </div>
+
+        <div class="price-card">
+          <h3>Enterprise</h3>
+          <div class="price">$499.90</div>
+          <div class="billed">per month</div>
+          <hr>
+          <ul class="features">
+            <li>
+              <span>Community Support</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>Flexible, simple license</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>100+ styled components</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>100+ header variations</span>
+              <span class="icon">&#x2713;</span>
+            </li>
+            <li>
+              <span>Speedy build tooling</span>
+              <span class="icon">&#x2713;</span>
             </li>
         </div>
       </div>
