Work on testimonial cards

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         </p>
       </div>
       <div class="pricing-table">
+        <!-- Left Card -->
         <div class="price-card">
           <h3>Basic</h3>
           <div class="price">$99.90</div>
@@ -197,6 +198,7 @@
             </li>
         </div>
 
+        <!-- Featured Card -->
         <div class="price-card featured">
           <h3>Standard</h3>
           <div class="price">$199.90</div>
@@ -228,6 +230,7 @@
             </div>
         </div>
 
+        <!-- Right Card -->
         <div class="price-card">
           <h3>Enterprise</h3>
           <div class="price">$499.90</div>
@@ -254,6 +257,63 @@
               <span>Speedy build tooling</span>
               <span class="icon">&#x2713;</span>
             </li>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <div class="block-text">
+        <h2>What are People Saying?</h2>
+      </div>
+      <div class="testimonial-grid">
+        <!-- Card 1 -->
+        <div class="testimonial-card">
+          <div class="top">
+            <img class="profile" src="./assets/images/1.png" alt="">
+            <div class="top-info">
+              <h4>Deborah Moreno</h4>
+              <span>United States</span>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="testimonial-card">
+          <div class="top">
+            <img class="profile" src="./assets/images/2.png" alt="">
+            <div class="top-info">
+              <h4>Pamela Knight</h4>
+              <span>United States</span>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="testimonial-card">
+          <div class="top">
+            <img class="profile" src="./assets/images/3.png" alt="">
+            <div class="top-info">
+              <h4>Peter Williams</h4>
+              <span>United States</span>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
         </div>
       </div>
     </section>
