Finish testimonial section

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       </div>
       <div class="testimonial-grid">
         <!-- Card 1 -->
-        <div class="testimonial-card">
+        <div class="testimonial-card lg">
           <div class="top">
             <img class="profile" src="./assets/images/1.png" alt="">
             <div class="top-info">
@@ -278,13 +278,13 @@
           </div>
           <div class="bottom">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Convallis tellus id interdum velit laoreet. Porttitor rhoncus dolor purus non enim praesent elementum facilisis leo. Nec tincidunt praesent semper feugiat nibh sed pulvinar.
             </p>
+            <span class="quote"><img src="./assets/images/quote-colored.svg" alt="quote"></span>
           </div>
         </div>
         <!-- Card 2 -->
-        <div class="testimonial-card">
+        <div class="testimonial-card md">
           <div class="top">
             <img class="profile" src="./assets/images/2.png" alt="">
             <div class="top-info">
@@ -300,7 +300,7 @@
           </div>
         </div>
         <!-- Card 3 -->
-        <div class="testimonial-card">
+        <div class="testimonial-card md">
           <div class="top">
             <img class="profile" src="./assets/images/3.png" alt="">
             <div class="top-info">
