--- a/index.html
+++ b/index.html
@@ -181,23 +181,23 @@
           <ul class="features">
             <li>
               <span>Community Support</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>Flexible, simple license</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>100+ styled components</span>
-              <span class="icon">&#10761;</span>
+              <span class="icon"><i class="fa-solid fa-x"></i></span>
             </li>
             <li>
               <span>100+ header variations</span>
-              <span class="icon">&#10761;</span>
+              <span class="icon"><i class="fa-solid fa-x"></i></span>
             </li>
             <li>
               <span>Speedy build tooling</span>
-              <span class="icon">&#10761;</span>
+              <span class="icon"><i class="fa-solid fa-x"></i></span>
             </li>
           </ul>
         </div>
@@ -210,27 +210,27 @@
           <ul class="features">
             <li>
               <span>Community Support</span>
-              <span class="icon checked">&#x2713;</span>
+              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>Flexible, simple license</span>
-              <span class="icon checked">&#x2713;</span>
+              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>100+ styled components</span>
-              <span class="icon checked">&#x2713;</span>
+              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>100+ header variations</span>
-              <span class="icon times">&#10761;</span>
+              <span class="icon times"><i class="fa-solid fa-x"></i></span>
             </li>
             <li>
               <span>Speedy build tooling</span>
-              <span class="icon times">&#10761;</span>
+              <span class="icon times"><i class="fa-solid fa-x"></i></span>
             </li>
           </ul>
           <div class="btn-wrapper">
-            <a class="btn btn-primary" href="#">Learn More</a>
+            <a class="btn btn-primary" href="#">Get Started</a>
           </div>
         </div>
         <!-- Right Card -->
@@ -242,23 +242,23 @@
           <ul class="features">
             <li>
               <span>Community Support</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>Flexible, simple license</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>100+ styled components</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>100+ header variations</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
             <li>
               <span>Speedy build tooling</span>
-              <span class="icon">&#x2713;</span>
+              <span class="icon"><i class="fa-solid fa-check"></i></span>
             </li>
           </ul>
         </div>
@@ -349,17 +349,17 @@
             <h5>Services</h5>
             <div class="services-wrapper">
               <h5>Mobile Apps</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
               </p>
             </div>
             <div class="services-wrapper">
               <h5>Brand Identity</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
               </p>
             </div>
             <div class="services-wrapper">
               <h5>Social Media</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
               </p>
             </div>
           </div>
