--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="pageTop"></div>
-    <nav class="navbar nav">
+    <nav id="topNav" class="navbar nav">
       <div class="container">
         <button
           class="navbar-toggler"
@@ -406,6 +406,15 @@
 
     <a id="scrollUp" href="#pageTop"><i class="fa-solid fa-arrow-up"></i></a>
     <script>
+      const nav = document.getElementById('topNav');
+      window.onscroll = function() {
+        if (window.pageYOffset > 100) {
+          nav.classList.add('sticky');
+        } else {
+          nav.classList.remove('sticky');
+        }
+      }
+
       const navButton = document.querySelector('button[aria-expanded]');
 
       function toggleNav({ target }) {
