Finish mobile responsive

--- a/index.html
+++ b/index.html
@@ -171,96 +171,98 @@
           tempor incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
-      <div class="pricing-table">
-        <!-- Left Card -->
-        <div class="price-card">
-          <h3>Basic</h3>
-          <div class="price">$99.90</div>
-          <div class="billed">per month</div>
-          <hr>
-          <ul class="features">
-            <li>
-              <span>Community Support</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>Flexible, simple license</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>100+ styled components</span>
-              <span class="icon"><i class="fa-solid fa-x"></i></span>
-            </li>
-            <li>
-              <span>100+ header variations</span>
-              <span class="icon"><i class="fa-solid fa-x"></i></span>
-            </li>
-            <li>
-              <span>Speedy build tooling</span>
-              <span class="icon"><i class="fa-solid fa-x"></i></span>
-            </li>
-          </ul>
-        </div>
-        <!-- Featured Card -->
-        <div class="price-card featured">
-          <h3>Standard</h3>
-          <div class="price">$199.90</div>
-          <div class="billed">per month</div>
-          <hr>
-          <ul class="features">
-            <li>
-              <span>Community Support</span>
-              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>Flexible, simple license</span>
-              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>100+ styled components</span>
-              <span class="icon checked"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>100+ header variations</span>
-              <span class="icon times"><i class="fa-solid fa-x"></i></span>
-            </li>
-            <li>
-              <span>Speedy build tooling</span>
-              <span class="icon times"><i class="fa-solid fa-x"></i></span>
-            </li>
-          </ul>
-          <div class="btn-wrapper">
-            <a class="btn btn-primary" href="#">Get Started</a>
+      <div class="container">
+        <div class="pricing-table">
+          <!-- Left Card -->
+          <div class="price-card">
+            <h3>Basic</h3>
+            <div class="price">$99.90</div>
+            <div class="billed">per month</div>
+            <hr>
+            <ul class="features">
+              <li>
+                <span>Community Support</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>Flexible, simple license</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>100+ styled components</span>
+                <span class="icon"><i class="fa-solid fa-x"></i></span>
+              </li>
+              <li>
+                <span>100+ header variations</span>
+                <span class="icon"><i class="fa-solid fa-x"></i></span>
+              </li>
+              <li>
+                <span>Speedy build tooling</span>
+                <span class="icon"><i class="fa-solid fa-x"></i></span>
+              </li>
+            </ul>
           </div>
-        </div>
-        <!-- Right Card -->
-        <div class="price-card">
-          <h3>Enterprise</h3>
-          <div class="price">$499.90</div>
-          <div class="billed">per month</div>
-          <hr>
-          <ul class="features">
-            <li>
-              <span>Community Support</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>Flexible, simple license</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>100+ styled components</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>100+ header variations</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <li>
-              <span>Speedy build tooling</span>
-              <span class="icon"><i class="fa-solid fa-check"></i></span>
-            </li>
-          </ul>
+          <!-- Featured Card -->
+          <div class="price-card featured">
+            <h3>Standard</h3>
+            <div class="price">$199.90</div>
+            <div class="billed">per month</div>
+            <hr>
+            <ul class="features">
+              <li>
+                <span>Community Support</span>
+                <span class="icon checked"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>Flexible, simple license</span>
+                <span class="icon checked"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>100+ styled components</span>
+                <span class="icon checked"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>100+ header variations</span>
+                <span class="icon times"><i class="fa-solid fa-x"></i></span>
+              </li>
+              <li>
+                <span>Speedy build tooling</span>
+                <span class="icon times"><i class="fa-solid fa-x"></i></span>
+              </li>
+            </ul>
+            <div class="btn-wrapper">
+              <a class="btn btn-primary" href="#">Get Started</a>
+            </div>
+          </div>
+          <!-- Right Card -->
+          <div class="price-card">
+            <h3>Enterprise</h3>
+            <div class="price">$499.90</div>
+            <div class="billed">per month</div>
+            <hr>
+            <ul class="features">
+              <li>
+                <span>Community Support</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>Flexible, simple license</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>100+ styled components</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>100+ header variations</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+              <li>
+                <span>Speedy build tooling</span>
+                <span class="icon"><i class="fa-solid fa-check"></i></span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -270,53 +272,55 @@
       <div class="block-text">
         <h2>What are People Saying?</h2>
       </div>
-      <div class="testimonial-grid">
-        <!-- Card 1 -->
-        <div class="testimonial-card lg">
-          <div class="top">
-            <img class="profile" src="./assets/images/1.png" alt="">
-            <div class="top-info">
-              <h4>Deborah Moreno</h4>
-              <span>United States</span>
+      <div class="container">
+        <div class="testimonial-grid">
+          <!-- Card 1 -->
+          <div class="testimonial-card lg">
+            <div class="top">
+              <img class="profile" src="./assets/images/1.png" alt="">
+              <div class="top-info">
+                <h4>Deborah Moreno</h4>
+                <span>United States</span>
+              </div>
+            </div>
+            <div class="bottom">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Convallis tellus id interdum velit laoreet. Porttitor rhoncus dolor purus non enim praesent elementum facilisis leo. Nec tincidunt praesent semper feugiat nibh sed pulvinar.
+              </p>
+              <span class="quote"><img src="./assets/images/quote-colored.svg" alt="quote"></span>
             </div>
           </div>
-          <div class="bottom">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Convallis tellus id interdum velit laoreet. Porttitor rhoncus dolor purus non enim praesent elementum facilisis leo. Nec tincidunt praesent semper feugiat nibh sed pulvinar.
-            </p>
-            <span class="quote"><img src="./assets/images/quote-colored.svg" alt="quote"></span>
-          </div>
-        </div>
-        <!-- Card 2 -->
-        <div class="testimonial-card md">
-          <div class="top">
-            <img class="profile" src="./assets/images/2.png" alt="">
-            <div class="top-info">
-              <h4>Pamela Knight</h4>
-              <span>United States</span>
+          <!-- Card 2 -->
+          <div class="testimonial-card md">
+            <div class="top">
+              <img class="profile" src="./assets/images/2.png" alt="">
+              <div class="top-info">
+                <h4>Pamela Knight</h4>
+                <span>United States</span>
+              </div>
+            </div>
+            <div class="bottom">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
             </div>
           </div>
-          <div class="bottom">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </div>
-        </div>
-        <!-- Card 3 -->
-        <div class="testimonial-card md">
-          <div class="top">
-            <img class="profile" src="./assets/images/3.png" alt="">
-            <div class="top-info">
-              <h4>Peter Williams</h4>
-              <span>United States</span>
+          <!-- Card 3 -->
+          <div class="testimonial-card md">
+            <div class="top">
+              <img class="profile" src="./assets/images/3.png" alt="">
+              <div class="top-info">
+                <h4>Peter Williams</h4>
+                <span>United States</span>
+              </div>
             </div>
-          </div>
-          <div class="bottom">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
+            <div class="bottom">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
           </div>
         </div>
       </div>
